add custom exportjson method to forms class to correctly render empty forms list

--- a/src/FormsConstructor/Forms.cls
+++ b/src/FormsConstructor/Forms.cls
@@ -5,4 +5,15 @@ Parameter %JSONIGNOREINVALIDFIELD = 1;
 
 Property Forms As list Of FormsConstructor.Form(%JSONFIELDNAME = "forms");
 
+Method ExportJSON() As %Status
+{
+    if (..Forms.Count() = 0) {
+        Set empty = {"forms": []}
+        Write empty.%ToJSON()
+        Return $$$OK
+    }
+    Set sc = ..%JSONExport() 
+    Return sc
+}
+
 }
