fix Records property json inclusion

--- a/src/FormsConstructor/Submission.cls
+++ b/src/FormsConstructor/Submission.cls
@@ -7,7 +7,7 @@ Property ID As %Integer(%JSONFIELDNAME = "id", %JSONINCLUDE = "OUTPUTONLY") [ Id
 
 Property Date As %PosixTime(%JSONFIELDNAME = "date");
 
-Property Records As list Of FormsConstructor.Records(%JSONFIELDNAME = "records") [ Transient ];
+Property Records As list Of FormsConstructor.Record(%JSONFIELDNAME = "records", %JSONINCLUDE = "OUTPUTONLY") [ Transient ];
 
 Relationship Form As FormsConstructor.Form [ Cardinality = one, Inverse = Submissions ];
 
@@ -16,6 +16,8 @@ Relationship TextRecords As FormsConstructor.TextRecord(%JSONINCLUDE = "none") [
 Relationship NumberRecords As FormsConstructor.NumberRecord(%JSONINCLUDE = "none") [ Cardinality = many, Inverse = Submission ];
 
 Relationship FlagRecords As FormsConstructor.FlagRecord(%JSONINCLUDE = "none") [ Cardinality = many, Inverse = Submission ];
+
+// FIXME: N+1 problem on form<->submission<->records fetching
 
 Method FetchRecords() As %Status
 {
